--- a/data/glycoprotein_positions.ipynb
+++ b/data/glycoprotein_positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "b44b04d1-7168-408e-8030-2542a92a04ef",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "c0caf8ce-7cc2-4965-b39a-a39af27a1b08",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "531038cb-15de-49eb-b69a-03ec6da04055",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "a0b4f2c1-97c5-4e3d-a5b1-c3554761a9dc",
    "metadata": {
     "tags": []
@@ -57,12 +57,14 @@
     "sequence_dataframe['reference_site']=numbering\n",
     "\n",
     "sequence_dataframe['sequential_wt']=seq_array;\n",
-    "sequence_dataframe['reference_wt']=seq_array;"
+    "sequence_dataframe['reference_wt']=seq_array;\n",
+    "\n",
+    "sequence_dataframe['reference_site']=sequence_dataframe['reference_site'].apply(lambda x: x-19);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "id": "528ef06f-2556-4300-beb9-be83376de601",
    "metadata": {},
    "outputs": [
@@ -76,7 +78,7 @@
        "       522, 523, 524, 525])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "id": "9a3a6a7b-b3d5-48e7-96cf-72fd32ddaea1",
    "metadata": {},
    "outputs": [
@@ -135,7 +137,7 @@
        "       437, 438, 439, 440])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "id": "f6a7161e-ea1c-42f8-b62c-d8def6b10a1e",
    "metadata": {},
    "outputs": [],
@@ -166,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "id": "113d7443-e971-45e8-b045-ba63b410ef91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence_dataframe['region']=sequence_dataframe['reference_site'].apply(lambda x: assign_domain(x))"
+    "sequence_dataframe['region']=sequence_dataframe['sequential_site'].apply(lambda x: assign_domain(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "id": "c33724ce-e966-438c-a6cf-11914739eaec",
    "metadata": {
     "tags": []
@@ -215,7 +217,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>M</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-18</td>\n",
        "      <td>M</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
@@ -223,7 +225,7 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>V</td>\n",
-       "      <td>2</td>\n",
+       "      <td>-17</td>\n",
        "      <td>V</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
@@ -231,7 +233,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>P</td>\n",
-       "      <td>3</td>\n",
+       "      <td>-16</td>\n",
        "      <td>P</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
@@ -239,7 +241,7 @@
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Q</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-15</td>\n",
        "      <td>Q</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
@@ -247,7 +249,7 @@
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>A</td>\n",
-       "      <td>5</td>\n",
+       "      <td>-14</td>\n",
        "      <td>A</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
@@ -263,7 +265,7 @@
        "      <th>520</th>\n",
        "      <td>521</td>\n",
        "      <td>E</td>\n",
-       "      <td>521</td>\n",
+       "      <td>502</td>\n",
        "      <td>E</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -271,7 +273,7 @@
        "      <th>521</th>\n",
        "      <td>522</td>\n",
        "      <td>T</td>\n",
-       "      <td>522</td>\n",
+       "      <td>503</td>\n",
        "      <td>T</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -279,7 +281,7 @@
        "      <th>522</th>\n",
        "      <td>523</td>\n",
        "      <td>G</td>\n",
-       "      <td>523</td>\n",
+       "      <td>504</td>\n",
        "      <td>G</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -287,7 +289,7 @@
        "      <th>523</th>\n",
        "      <td>524</td>\n",
        "      <td>L</td>\n",
-       "      <td>524</td>\n",
+       "      <td>505</td>\n",
        "      <td>L</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -295,7 +297,7 @@
        "      <th>524</th>\n",
        "      <td>525</td>\n",
        "      <td>*</td>\n",
-       "      <td>525</td>\n",
+       "      <td>506</td>\n",
        "      <td>*</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -306,17 +308,17 @@
       ],
       "text/plain": [
        "     sequential_site sequential_wt  reference_site reference_wt  \\\n",
-       "0                  1             M               1            M   \n",
-       "1                  2             V               2            V   \n",
-       "2                  3             P               3            P   \n",
-       "3                  4             Q               4            Q   \n",
-       "4                  5             A               5            A   \n",
+       "0                  1             M             -18            M   \n",
+       "1                  2             V             -17            V   \n",
+       "2                  3             P             -16            P   \n",
+       "3                  4             Q             -15            Q   \n",
+       "4                  5             A             -14            A   \n",
        "..               ...           ...             ...          ...   \n",
-       "520              521             E             521            E   \n",
-       "521              522             T             522            T   \n",
-       "522              523             G             523            G   \n",
-       "523              524             L             524            L   \n",
-       "524              525             *             525            *   \n",
+       "520              521             E             502            E   \n",
+       "521              522             T             503            T   \n",
+       "522              523             G             504            G   \n",
+       "523              524             L             505            L   \n",
+       "524              525             *             506            *   \n",
        "\n",
        "                 region  \n",
        "0        signal_peptide  \n",
@@ -334,7 +336,7 @@
        "[525 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "id": "a6245cb8-6cd2-434f-8796-2eaf0d3d60bf",
    "metadata": {
     "tags": []
@@ -353,6 +355,173 @@
    "outputs": [],
    "source": [
     "sequence_dataframe.to_csv('site_numbering_map.csv');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "629939b9-d95b-4f20-bc2e-50646b3782be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sequential_site</th>\n",
+       "      <th>sequential_wt</th>\n",
+       "      <th>reference_site</th>\n",
+       "      <th>reference_wt</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>V</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>V</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>P</td>\n",
+       "      <td>-13</td>\n",
+       "      <td>P</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>A</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>521</td>\n",
+       "      <td>E</td>\n",
+       "      <td>505</td>\n",
+       "      <td>E</td>\n",
+       "      <td>cytoplasmic_domain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>521</th>\n",
+       "      <td>522</td>\n",
+       "      <td>T</td>\n",
+       "      <td>506</td>\n",
+       "      <td>T</td>\n",
+       "      <td>cytoplasmic_domain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>523</td>\n",
+       "      <td>G</td>\n",
+       "      <td>507</td>\n",
+       "      <td>G</td>\n",
+       "      <td>cytoplasmic_domain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>523</th>\n",
+       "      <td>524</td>\n",
+       "      <td>L</td>\n",
+       "      <td>508</td>\n",
+       "      <td>L</td>\n",
+       "      <td>cytoplasmic_domain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524</th>\n",
+       "      <td>525</td>\n",
+       "      <td>*</td>\n",
+       "      <td>509</td>\n",
+       "      <td>*</td>\n",
+       "      <td>cytoplasmic_domain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>525 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sequential_site sequential_wt  reference_site reference_wt  \\\n",
+       "0                  1             M             -15            M   \n",
+       "1                  2             V             -14            V   \n",
+       "2                  3             P             -13            P   \n",
+       "3                  4             Q             -12            Q   \n",
+       "4                  5             A             -11            A   \n",
+       "..               ...           ...             ...          ...   \n",
+       "520              521             E             505            E   \n",
+       "521              522             T             506            T   \n",
+       "522              523             G             507            G   \n",
+       "523              524             L             508            L   \n",
+       "524              525             *             509            *   \n",
+       "\n",
+       "                 region  \n",
+       "0        signal_peptide  \n",
+       "1        signal_peptide  \n",
+       "2        signal_peptide  \n",
+       "3        signal_peptide  \n",
+       "4        signal_peptide  \n",
+       "..                  ...  \n",
+       "520  cytoplasmic_domain  \n",
+       "521  cytoplasmic_domain  \n",
+       "522  cytoplasmic_domain  \n",
+       "523  cytoplasmic_domain  \n",
+       "524  cytoplasmic_domain  \n",
+       "\n",
+       "[525 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence_dataframe"
    ]
   },
   {
