--- a/scratch_notebook/glycoprotein_positions.ipynb
+++ b/scratch_notebook/glycoprotein_positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "b44b04d1-7168-408e-8030-2542a92a04ef",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "c0caf8ce-7cc2-4965-b39a-a39af27a1b08",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "531038cb-15de-49eb-b69a-03ec6da04055",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "a0b4f2c1-97c5-4e3d-a5b1-c3554761a9dc",
    "metadata": {
     "tags": []
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "528ef06f-2556-4300-beb9-be83376de601",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "       522, 523, 524, 525])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "9a3a6a7b-b3d5-48e7-96cf-72fd32ddaea1",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "       437, 438, 439, 440])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "f6a7161e-ea1c-42f8-b62c-d8def6b10a1e",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "113d7443-e971-45e8-b045-ba63b410ef91",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "c33724ce-e966-438c-a6cf-11914739eaec",
    "metadata": {
     "tags": []
@@ -336,7 +336,7 @@
        "[525 rows x 5 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,19 +347,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "a6245cb8-6cd2-434f-8796-2eaf0d3d60bf",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "sequence_dataframe = sequence_dataframe[sequence_dataframe['reference_site']>=-1];\n",
+    "\n",
     "sequence_dataframe.to_csv('site_numbering_map.csv');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "629939b9-d95b-4f20-bc2e-50646b3782be",
    "metadata": {},
    "outputs": [
@@ -393,44 +395,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>F</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>signal_peptide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>K</td>\n",
        "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>-15</td>\n",
-       "      <td>M</td>\n",
+       "      <td>K</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>F</td>\n",
        "      <td>2</td>\n",
-       "      <td>V</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>V</td>\n",
-       "      <td>signal_peptide</td>\n",
+       "      <td>F</td>\n",
+       "      <td>ectodomain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>P</td>\n",
        "      <td>3</td>\n",
        "      <td>P</td>\n",
-       "      <td>-13</td>\n",
-       "      <td>P</td>\n",
-       "      <td>signal_peptide</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>signal_peptide</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>A</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>A</td>\n",
-       "      <td>signal_peptide</td>\n",
+       "      <td>ectodomain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -444,7 +446,7 @@
        "      <th>520</th>\n",
        "      <td>521</td>\n",
        "      <td>E</td>\n",
-       "      <td>505</td>\n",
+       "      <td>502</td>\n",
        "      <td>E</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -452,7 +454,7 @@
        "      <th>521</th>\n",
        "      <td>522</td>\n",
        "      <td>T</td>\n",
-       "      <td>506</td>\n",
+       "      <td>503</td>\n",
        "      <td>T</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -460,7 +462,7 @@
        "      <th>522</th>\n",
        "      <td>523</td>\n",
        "      <td>G</td>\n",
-       "      <td>507</td>\n",
+       "      <td>504</td>\n",
        "      <td>G</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -468,7 +470,7 @@
        "      <th>523</th>\n",
        "      <td>524</td>\n",
        "      <td>L</td>\n",
-       "      <td>508</td>\n",
+       "      <td>505</td>\n",
        "      <td>L</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -476,35 +478,35 @@
        "      <th>524</th>\n",
        "      <td>525</td>\n",
        "      <td>*</td>\n",
-       "      <td>509</td>\n",
+       "      <td>506</td>\n",
        "      <td>*</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>525 rows × 5 columns</p>\n",
+       "<p>508 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     sequential_site sequential_wt  reference_site reference_wt  \\\n",
-       "0                  1             M             -15            M   \n",
-       "1                  2             V             -14            V   \n",
-       "2                  3             P             -13            P   \n",
-       "3                  4             Q             -12            Q   \n",
-       "4                  5             A             -11            A   \n",
+       "17                18             F              -1            F   \n",
+       "18                19             G               0            G   \n",
+       "19                20             K               1            K   \n",
+       "20                21             F               2            F   \n",
+       "21                22             P               3            P   \n",
        "..               ...           ...             ...          ...   \n",
-       "520              521             E             505            E   \n",
-       "521              522             T             506            T   \n",
-       "522              523             G             507            G   \n",
-       "523              524             L             508            L   \n",
-       "524              525             *             509            *   \n",
+       "520              521             E             502            E   \n",
+       "521              522             T             503            T   \n",
+       "522              523             G             504            G   \n",
+       "523              524             L             505            L   \n",
+       "524              525             *             506            *   \n",
        "\n",
        "                 region  \n",
-       "0        signal_peptide  \n",
-       "1        signal_peptide  \n",
-       "2        signal_peptide  \n",
-       "3        signal_peptide  \n",
-       "4        signal_peptide  \n",
+       "17       signal_peptide  \n",
+       "18       signal_peptide  \n",
+       "19       signal_peptide  \n",
+       "20           ectodomain  \n",
+       "21           ectodomain  \n",
        "..                  ...  \n",
        "520  cytoplasmic_domain  \n",
        "521  cytoplasmic_domain  \n",
@@ -512,10 +514,10 @@
        "523  cytoplasmic_domain  \n",
        "524  cytoplasmic_domain  \n",
        "\n",
-       "[525 rows x 5 columns]"
+       "[508 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
