--- a/scratch_notebook/glycoprotein_positions.ipynb
+++ b/scratch_notebook/glycoprotein_positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "b44b04d1-7168-408e-8030-2542a92a04ef",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "c0caf8ce-7cc2-4965-b39a-a39af27a1b08",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "531038cb-15de-49eb-b69a-03ec6da04055",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "a0b4f2c1-97c5-4e3d-a5b1-c3554761a9dc",
    "metadata": {
     "tags": []
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "528ef06f-2556-4300-beb9-be83376de601",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "       522, 523, 524, 525])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "9a3a6a7b-b3d5-48e7-96cf-72fd32ddaea1",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "       437, 438, 439, 440])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "f6a7161e-ea1c-42f8-b62c-d8def6b10a1e",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "113d7443-e971-45e8-b045-ba63b410ef91",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "c33724ce-e966-438c-a6cf-11914739eaec",
    "metadata": {
     "tags": []
@@ -336,7 +336,7 @@
        "[525 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,21 +347,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "a6245cb8-6cd2-434f-8796-2eaf0d3d60bf",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "sequence_dataframe = sequence_dataframe[sequence_dataframe['reference_site']>=-1];\n",
+    "sequence_dataframe = sequence_dataframe[sequence_dataframe['reference_site']>=18];\n",
+    "sequence_dataframe = sequence_dataframe[sequence_dataframe['reference_site']<=450];\n",
+    "\n",
+    "#renumber sequential site to start at 1\n",
+    "sequence_dataframe['sequential_site'] = sequence_dataframe['sequential_site'].apply(lambda x: x-17);\n",
+    "\n",
+    "\n",
     "\n",
     "sequence_dataframe.to_csv('site_numbering_map.csv');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "629939b9-d95b-4f20-bc2e-50646b3782be",
    "metadata": {},
    "outputs": [
@@ -396,41 +402,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>18</td>\n",
+       "      <td>1</td>\n",
        "      <td>F</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>18</td>\n",
        "      <td>F</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>19</td>\n",
+       "      <td>2</td>\n",
        "      <td>G</td>\n",
-       "      <td>0</td>\n",
+       "      <td>19</td>\n",
        "      <td>G</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>20</td>\n",
+       "      <td>3</td>\n",
        "      <td>K</td>\n",
-       "      <td>1</td>\n",
+       "      <td>20</td>\n",
        "      <td>K</td>\n",
        "      <td>signal_peptide</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>21</td>\n",
+       "      <td>4</td>\n",
        "      <td>F</td>\n",
-       "      <td>2</td>\n",
+       "      <td>21</td>\n",
        "      <td>F</td>\n",
        "      <td>ectodomain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>22</td>\n",
+       "      <td>5</td>\n",
        "      <td>P</td>\n",
-       "      <td>3</td>\n",
+       "      <td>22</td>\n",
        "      <td>P</td>\n",
        "      <td>ectodomain</td>\n",
        "    </tr>\n",
@@ -444,41 +450,41 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>520</th>\n",
-       "      <td>521</td>\n",
+       "      <td>504</td>\n",
        "      <td>E</td>\n",
-       "      <td>502</td>\n",
+       "      <td>521</td>\n",
        "      <td>E</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>521</th>\n",
-       "      <td>522</td>\n",
+       "      <td>505</td>\n",
        "      <td>T</td>\n",
-       "      <td>503</td>\n",
+       "      <td>522</td>\n",
        "      <td>T</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>522</th>\n",
-       "      <td>523</td>\n",
+       "      <td>506</td>\n",
        "      <td>G</td>\n",
-       "      <td>504</td>\n",
+       "      <td>523</td>\n",
        "      <td>G</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>523</th>\n",
-       "      <td>524</td>\n",
+       "      <td>507</td>\n",
        "      <td>L</td>\n",
-       "      <td>505</td>\n",
+       "      <td>524</td>\n",
        "      <td>L</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>524</th>\n",
-       "      <td>525</td>\n",
+       "      <td>508</td>\n",
        "      <td>*</td>\n",
-       "      <td>506</td>\n",
+       "      <td>525</td>\n",
        "      <td>*</td>\n",
        "      <td>cytoplasmic_domain</td>\n",
        "    </tr>\n",
@@ -489,17 +495,17 @@
       ],
       "text/plain": [
        "     sequential_site sequential_wt  reference_site reference_wt  \\\n",
-       "17                18             F              -1            F   \n",
-       "18                19             G               0            G   \n",
-       "19                20             K               1            K   \n",
-       "20                21             F               2            F   \n",
-       "21                22             P               3            P   \n",
+       "17                 1             F              18            F   \n",
+       "18                 2             G              19            G   \n",
+       "19                 3             K              20            K   \n",
+       "20                 4             F              21            F   \n",
+       "21                 5             P              22            P   \n",
        "..               ...           ...             ...          ...   \n",
-       "520              521             E             502            E   \n",
-       "521              522             T             503            T   \n",
-       "522              523             G             504            G   \n",
-       "523              524             L             505            L   \n",
-       "524              525             *             506            *   \n",
+       "520              504             E             521            E   \n",
+       "521              505             T             522            T   \n",
+       "522              506             G             523            G   \n",
+       "523              507             L             524            L   \n",
+       "524              508             *             525            *   \n",
        "\n",
        "                 region  \n",
        "17       signal_peptide  \n",
@@ -517,7 +523,7 @@
        "[508 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
