aRVC58 replicate analysis retry

--- a/scratch_notebook/glycoprotein_positions.ipynb
+++ b/scratch_notebook/glycoprotein_positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "b44b04d1-7168-408e-8030-2542a92a04ef",
    "metadata": {
     "tags": []
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f8f96a01-d870-4839-ab2b-1bbecc310b69",
    "metadata": {
     "tags": []
@@ -993,7 +993,7 @@
        "8247"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "25fe3b1b-9f11-47fe-aec5-e8b0974d68eb",
    "metadata": {
     "tags": []
@@ -1054,122 +1054,122 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>20</td>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
        "      <td>A</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>20</td>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
        "      <td>C</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>20</td>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
        "      <td>D</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>20</td>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
        "      <td>E</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>20</td>\n",
-       "      <td>F</td>\n",
-       "      <td>designed_mutation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>20</td>\n",
+       "      <th>4</th>\n",
+       "      <td>18</td>\n",
        "      <td>G</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>20</td>\n",
+       "      <th>5</th>\n",
+       "      <td>18</td>\n",
        "      <td>H</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>20</td>\n",
+       "      <th>6</th>\n",
+       "      <td>18</td>\n",
        "      <td>I</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>20</td>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>K</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>18</td>\n",
        "      <td>L</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>20</td>\n",
+       "      <th>9</th>\n",
+       "      <td>18</td>\n",
        "      <td>M</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>20</td>\n",
+       "      <th>10</th>\n",
+       "      <td>18</td>\n",
        "      <td>N</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>20</td>\n",
+       "      <th>11</th>\n",
+       "      <td>18</td>\n",
        "      <td>P</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>20</td>\n",
+       "      <th>12</th>\n",
+       "      <td>18</td>\n",
        "      <td>Q</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>20</td>\n",
+       "      <th>13</th>\n",
+       "      <td>18</td>\n",
        "      <td>R</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>20</td>\n",
+       "      <th>14</th>\n",
+       "      <td>18</td>\n",
        "      <td>S</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>20</td>\n",
+       "      <th>15</th>\n",
+       "      <td>18</td>\n",
        "      <td>T</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>20</td>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
        "      <td>V</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>20</td>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
        "      <td>W</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>20</td>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
        "      <td>Y</td>\n",
        "      <td>designed_mutation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>20</td>\n",
+       "      <th>19</th>\n",
+       "      <td>18</td>\n",
        "      <td>*</td>\n",
        "      <td>stop</td>\n",
        "    </tr>\n",
@@ -1179,26 +1179,26 @@
       ],
       "text/plain": [
        "    sequential_site amino_acid      mutation_type\n",
-       "39               20          A  designed_mutation\n",
-       "40               20          C  designed_mutation\n",
-       "41               20          D  designed_mutation\n",
-       "42               20          E  designed_mutation\n",
-       "43               20          F  designed_mutation\n",
-       "44               20          G  designed_mutation\n",
-       "45               20          H  designed_mutation\n",
-       "46               20          I  designed_mutation\n",
-       "47               20          L  designed_mutation\n",
-       "48               20          M  designed_mutation\n",
-       "49               20          N  designed_mutation\n",
-       "50               20          P  designed_mutation\n",
-       "51               20          Q  designed_mutation\n",
-       "52               20          R  designed_mutation\n",
-       "53               20          S  designed_mutation\n",
-       "54               20          T  designed_mutation\n",
-       "55               20          V  designed_mutation\n",
-       "56               20          W  designed_mutation\n",
-       "57               20          Y  designed_mutation\n",
-       "58               20          *               stop"
+       "0                18          A  designed_mutation\n",
+       "1                18          C  designed_mutation\n",
+       "2                18          D  designed_mutation\n",
+       "3                18          E  designed_mutation\n",
+       "4                18          G  designed_mutation\n",
+       "5                18          H  designed_mutation\n",
+       "6                18          I  designed_mutation\n",
+       "7                18          K  designed_mutation\n",
+       "8                18          L  designed_mutation\n",
+       "9                18          M  designed_mutation\n",
+       "10               18          N  designed_mutation\n",
+       "11               18          P  designed_mutation\n",
+       "12               18          Q  designed_mutation\n",
+       "13               18          R  designed_mutation\n",
+       "14               18          S  designed_mutation\n",
+       "15               18          T  designed_mutation\n",
+       "16               18          V  designed_mutation\n",
+       "17               18          W  designed_mutation\n",
+       "18               18          Y  designed_mutation\n",
+       "19               18          *               stop"
       ]
      },
      "execution_count": 11,
@@ -1207,12 +1207,176 @@
     }
    ],
    "source": [
-    "designed_mutations[designed_mutations['sequential_site']==20]"
+    "designed_mutations[designed_mutations['sequential_site']==18]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
+   "id": "2696b500-7165-4189-b075-fb5e1f3edd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#okay let's delete stop codons as \"unintended_mutant\"\n",
+    "\n",
+    "for i in mutations_range:\n",
+    "    #amino acid -1 due to 0 index in string\n",
+    "    codon_position = i-1;\n",
+    "    wt_aa = seq[codon_position];\n",
+    "\n",
+    "    \n",
+    "    sequential_site.append(i);\n",
+    "    amino_acid.append('-');\n",
+    "    mutation_type.append('unintended_mutant');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "26356e68-dd01-41ee-a82c-f32f19a483b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "designed_mutations = pd.DataFrame(columns=['sequential_site','amino_acid','mutation_type']);\n",
+    "\n",
+    "designed_mutations['sequential_site']=sequential_site\n",
+    "designed_mutations['amino_acid']=amino_acid\n",
+    "designed_mutations['mutation_type']=mutation_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5a16883f-a593-435e-a22b-c5ec4ed32f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sequential_site</th>\n",
+       "      <th>amino_acid</th>\n",
+       "      <th>mutation_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
+       "      <td>A</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>C</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
+       "      <td>D</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>E</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18</td>\n",
+       "      <td>G</td>\n",
+       "      <td>designed_mutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8675</th>\n",
+       "      <td>446</td>\n",
+       "      <td>-</td>\n",
+       "      <td>unintended_mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8676</th>\n",
+       "      <td>447</td>\n",
+       "      <td>-</td>\n",
+       "      <td>unintended_mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8677</th>\n",
+       "      <td>448</td>\n",
+       "      <td>-</td>\n",
+       "      <td>unintended_mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8678</th>\n",
+       "      <td>449</td>\n",
+       "      <td>-</td>\n",
+       "      <td>unintended_mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8679</th>\n",
+       "      <td>450</td>\n",
+       "      <td>-</td>\n",
+       "      <td>unintended_mutant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8680 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sequential_site amino_acid      mutation_type\n",
+       "0                  18          A  designed_mutation\n",
+       "1                  18          C  designed_mutation\n",
+       "2                  18          D  designed_mutation\n",
+       "3                  18          E  designed_mutation\n",
+       "4                  18          G  designed_mutation\n",
+       "...               ...        ...                ...\n",
+       "8675              446          -  unintended_mutant\n",
+       "8676              447          -  unintended_mutant\n",
+       "8677              448          -  unintended_mutant\n",
+       "8678              449          -  unintended_mutant\n",
+       "8679              450          -  unintended_mutant\n",
+       "\n",
+       "[8680 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "designed_mutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "ccaa68ce-f5da-4500-8c93-bc5535b75e68",
    "metadata": {
     "tags": []
@@ -1221,6 +1385,14 @@
    "source": [
     "designed_mutations.to_csv('designed_mutations.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3cf0211-d426-484b-8da5-731268581986",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
