Add dmsa-pred to tree and antibody escape comparison

--- a/notebooks/get_filtered_CSVs.ipynb
+++ b/notebooks/get_filtered_CSVs.ipynb
@@ -54,11 +54,13 @@
     "# this cell is tagged as `parameters` for papermill parameterization\n",
     "func_effects = None\n",
     "func_effects_config = None\n",
+    "site_numbering_map = None\n",
     "\n",
     "antibody_escape_dir = None\n",
     "antibody_escape_config = None\n",
     "\n",
-    "filtered_csv_dir = None\n",
+    "filtered_antibody_csv_dir = None\n",
+    "filtered_func_csv_dir = None\n",
     "filtered_func_effects = None"
    ]
   },
@@ -78,12 +80,14 @@
     "# # Uncomment for running interactive\n",
     "# func_effects = \"../results/func_effects/averages/HEK293T_entry_func_effects.csv\"\n",
     "# func_effects_config = \"../data/func_effects_config.yml\"\n",
+    "# site_numbering_map = \"../data/site_numbering_map.csv\"\n",
     "\n",
     "# antibody_escape_dir = \"../results/antibody_escape/averages/\"\n",
     "# antibody_escape_config = \"../data/antibody_escape_config.yml\"\n",
     "\n",
-    "# filtered_csv_dir = \"../results/filtered_CSVs/\"\n",
-    "# filtered_func_effects = \"../results/filtered_CSVs/HEK293T_filitered_entry_func_effects.csv\""
+    "# filtered_antibody_csv_dir = \"../results/filtered_antibody_escape_CSVs/\"\n",
+    "# filtered_func_csv_dir = \"../results/filtered_func_effects_CSV/\"\n",
+    "# filtered_func_effects = \"../results/filtered_func_effects_CSV/HEK293T_filitered_entry_func_effects.csv\""
    ]
   },
   {
@@ -134,7 +138,18 @@
     "std = antibody_config[\"avg_escape_plot_kwargs_default\"][\"addtl_slider_stats\"][\"escape_std\"]\n",
     "print(f\"Maximum STDEV: {std}\")\n",
     "escape_metric = antibody_config[\"avg_escape_plot_kwargs_default\"][\"avg_type\"]\n",
-    "print(f\"Escape score metric: {escape_metric}\")"
+    "print(f\"Escape score metric: {escape_metric}\")\n",
+    "\n",
+    "# Load site map\n",
+    "site_map = (\n",
+    "    pd.read_csv(site_numbering_map)\n",
+    "    .rename(columns={\n",
+    "        \"Unnamed: 0\" : \"natural_sequence_site\",\n",
+    "        \"reference_site\" : \"site\",\n",
+    "    })\n",
+    ")\n",
+    "# Adjust sequencing to be 1 indexed\n",
+    "site_map[\"natural_sequence_site\"] = site_map[\"natural_sequence_site\"] + 1"
    ]
   },
   {
@@ -158,6 +173,7 @@
     "    min_models,\n",
     "    max_std,\n",
     "    escape_metric,\n",
+    "    site_map,\n",
     "    filtered_file_dir = None,\n",
     "):\n",
     "    \"\"\"\n",
@@ -194,12 +210,30 @@
     "        .reset_index(drop=True)\n",
     "    )\n",
     "\n",
+    "    # Merge site map\n",
+    "    escape_df = (\n",
+    "        escape_df.merge(\n",
+    "            site_map,\n",
+    "            how=\"left\",\n",
+    "            on=[\"site\"],\n",
+    "            validate=\"many_to_one\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Natural sequence mutation\n",
+    "    escape_df[\"natural_sequence_mutation\"] = (\n",
+    "        escape_df[\"wildtype\"] + escape_df[\"natural_sequence_site\"].astype(str) + escape_df[\"mutant\"]\n",
+    "    )\n",
+    "\n",
     "    # Drop all but a few columns\n",
     "    escape_df = escape_df[[\n",
-    "            \"site\", \n",
+    "            \"site\",\n",
+    "            \"natural_sequence_site\",\n",
+    "            \"sequential_site\",\n",
     "            \"wildtype\", \n",
     "            \"mutant\", \n",
     "            \"mutation\", \n",
+    "            \"natural_sequence_mutation\",\n",
     "            \"escape\",\n",
     "    ]]\n",
     "\n",
@@ -247,8 +281,8 @@
     "for antibody in antibodies:\n",
     "\n",
     "    # Make output dir if doesn't exist\n",
-    "    if not os.path.exists(filtered_csv_dir):\n",
-    "        os.mkdir(filtered_csv_dir)\n",
+    "    if not os.path.exists(filtered_antibody_csv_dir):\n",
+    "        os.mkdir(filtered_antibody_csv_dir)\n",
     "    \n",
     "    get_filtered_csv(\n",
     "        antibody,\n",
@@ -258,7 +292,8 @@
     "        min_models,\n",
     "        std,\n",
     "        escape_metric,\n",
-    "        filtered_file_dir = filtered_csv_dir,\n",
+    "        site_map,\n",
+    "        filtered_file_dir = filtered_antibody_csv_dir,\n",
     "    )"
    ]
   },
@@ -296,6 +331,21 @@
     "# Read CSV file\n",
     "func_scores = pd.read_csv(func_effects)\n",
     "\n",
+    "# Merge site map\n",
+    "func_scores = (\n",
+    "    func_scores.merge(\n",
+    "        site_map,\n",
+    "        how=\"left\",\n",
+    "        on=[\"site\"],\n",
+    "        validate=\"many_to_one\",\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Natural sequence mutation\n",
+    "func_scores[\"natural_sequence_mutation\"] = (\n",
+    "    func_scores[\"wildtype\"] + func_scores[\"natural_sequence_site\"].astype(str) + func_scores[\"mutant\"]\n",
+    ")\n",
+    "\n",
     "# Filter for minimum selections, times seen\n",
     "func_scores = (\n",
     "    func_scores.loc[\n",
@@ -307,11 +357,17 @@
     "    ]\n",
     "    .drop(columns=[\n",
     "        \"effect_std\",\n",
+    "        \"sequential_wt\",\n",
+    "        \"reference_wt\",\n",
     "        \"times_seen\",\n",
     "        \"n_selections\",\n",
     "    ])\n",
     "    .reset_index(drop=True)\n",
     ")\n",
+    "\n",
+    "# Make output dir if doesn't exist\n",
+    "if not os.path.exists(filtered_func_csv_dir):\n",
+    "    os.mkdir(filtered_func_csv_dir)\n",
     "\n",
     "# Save CSV file\n",
     "func_scores.to_csv(filtered_func_effects, index=False)"
