added antibodies when not too many

--- a/notebooks/configure_dms_viz.py.ipynb
+++ b/notebooks/configure_dms_viz.py.ipynb
@@ -60,7 +60,7 @@
     "pdb_id = config[\"pdb_id\"]\n",
     "escape_or_phenotype = config[\"escape_or_phenotype\"]\n",
     "phenotypes_list = config[\"phenotypes\"]\n",
-    "antibodies_list = config[\"antibodies\"]\n",
+    "antibody_list = config[\"antibodies\"]\n",
     "\n",
     "phenotypes_csv = snakemake.input.phenotypes_csv\n",
     "if escape_or_phenotype == \"escape\":\n",
@@ -197,14 +197,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extra_cols = list(sorted(set().union(*[config[c] for c in [\"tooltip-cols\", \"filter-cols\"]])))\n",
+    "# get extra columns dealing with fact `dms-viz` does not allow them to have spaces\n",
+    "extra_cols = []\n",
+    "for coltype in [\"tooltip-cols\", \"filter-cols\"]:\n",
+    "    for col in list(config[coltype]):\n",
+    "        col_nospace = col.replace(\" \", \"_\")\n",
+    "        assert (col in phenotypes_all.columns) or (col_nospace in phenotypes_all.columns), f\"no column {col} in {phenotypes_all.columns=}\"\n",
+    "        if col != col_nospace:\n",
+    "            assert (col_nospace not in phenotypes_all.columns) or (col not in phenotypes_all.columns)\n",
+    "            assert col_nospace not in config[coltype]\n",
+    "            phenotypes_all = phenotypes_all.rename(columns={col: col_nospace}, errors=\"ignore\")\n",
+    "            config[coltype][col_nospace] = config[coltype][col]\n",
+    "            del config[coltype][col]\n",
+    "            extra_cols.append(col_nospace)\n",
+    "        else:\n",
+    "            extra_cols.append(col)\n",
     "print(f\"Keeping {extra_cols=} for filters and tooltips\")\n",
     "assert set(extra_cols).issubset(phenotypes_all.columns)\n",
     "\n",
     "id_cols = [\"site\", \"wildtype\", \"mutant\"]\n",
     "\n",
     "if escape_or_phenotype == \"phenotype\":\n",
-    "    assert phenotypes_list and not antibodies_list, f\"{phenotypes=}, {antibodies=}\"\n",
+    "    assert phenotypes_list and not antibody_list, f\"{phenotypes_list=}, {antibody_list=}\"\n",
     "    assert set(phenotypes_list).issubset(phenotypes_all.columns), f\"{phenotypes_list=}\\n{phenotypes_all.columns=}\"\n",
     "    metric_column = \"effect\"\n",
     "    condition_column = \"phenotype\"\n",
@@ -220,12 +234,29 @@
     "\n",
     "elif escape_or_phenotype == \"escape\":\n",
     "    assert not phenotypes_list\n",
-    "    if extra_cols:\n",
-    "        join_data = phenotypes[id_cols + extra_cols]\n",
-    "        assert len(join_data) == len(join_data.groupby(id_cols))\n",
+    "\n",
+    "    phenotypes = pd.read_csv(per_antibody_escape_csv)\n",
+    "\n",
+    "    antibodies_all = list(phenotypes[\"antibody\"].unique())\n",
+    "    if antibody_list is not None:\n",
+    "        antibodies = antibody_list\n",
+    "        print(f\"Using just {antibodies=} from {antibodies_all=}\")\n",
+    "        assert set(antibodies).issubset(antibodies_all), f\"{antibodies=}\\n{antibodies_all=}\"\n",
+    "        assert len(antibodies) >= 1\n",
     "    else:\n",
-    "        join_data = None\n",
-    "    raise NotImplementedError(\"read antibody stuff\")\n",
+    "        antibodies = antibodies_all\n",
+    "        print(f\"Using all {antibodies=}\")\n",
+    "    antibodies = antibodies[: 4]\n",
+    "    metric_column = \"escape\"\n",
+    "    condition_column = \"antibody\"\n",
+    "    phenotypes = phenotypes[id_cols + [metric_column, condition_column]]\n",
+    "    phenotypes = phenotypes[phenotypes[condition_column].isin(antibodies)]\n",
+    "    \n",
+    "    if extra_cols:\n",
+    "        join_data = phenotypes_all[id_cols + extra_cols]\n",
+    "        assert len(join_data) == len(join_data.groupby(id_cols))\n",
+    "        assert set(join_data.columns).intersection(phenotypes.columns) == set(id_cols)\n",
+    "        phenotypes = phenotypes.merge(join_data, on=id_cols, validate=\"many_to_one\", how=\"left\")\n",
     "\n",
     "else:\n",
     "    raise ValueError(f\"invalid {escape_or_phenotype=}\")\n",
@@ -245,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2732db-5a7f-47d3-a802-1f6a6605be53",
+   "id": "05985846-a8e8-410e-a6b7-bbca3de736fa",
    "metadata": {
     "execution": {
      "iopub.status.busy": "2024-11-03T13:59:33.288031Z",
