handle arbitrary colors

--- a/notebooks/configure_dms_viz.py.ipynb
+++ b/notebooks/configure_dms_viz.py.ipynb
@@ -32,7 +32,11 @@
     "import Bio.PDB.PDBParser\n",
     "import Bio.PDB.Polypeptide\n",
     "\n",
-    "import pandas as pd"
+    "import matplotlib.colors\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import seaborn"
    ]
   },
   {
@@ -210,6 +214,10 @@
     "            config[coltype][col_nospace] = config[coltype][col]\n",
     "            del config[coltype][col]\n",
     "            extra_cols.append(col_nospace)\n",
+    "            if coltype == \"filter-cols\":\n",
+    "                if col in config[\"filter-limits\"]:\n",
+    "                    config[\"filter-limits\"][col_nospace] = config[\"filter-limits\"][col]\n",
+    "                    del config[\"filter-limits\"][col]\n",
     "        else:\n",
     "            extra_cols.append(col)\n",
     "print(f\"Keeping {extra_cols=} for filters and tooltips\")\n",
@@ -246,7 +254,7 @@
     "    else:\n",
     "        antibodies = antibodies_all\n",
     "        print(f\"Using all {antibodies=}\")\n",
-    "    antibodies = antibodies[: 4]\n",
+    "    antibodies = antibodies\n",
     "    metric_column = \"escape\"\n",
     "    condition_column = \"antibody\"\n",
     "    phenotypes = phenotypes[id_cols + [metric_column, condition_column]]\n",
@@ -271,53 +279,29 @@
    "id": "641f778f-3e17-4e66-827d-d78822103ea7",
    "metadata": {},
    "source": [
-    "Write the phenotypes after adding the per-antibody escape to a CSV file:"
+    "Get enough colors:"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "05985846-a8e8-410e-a6b7-bbca3de736fa",
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2024-11-03T13:59:33.288031Z",
-     "iopub.status.idle": "2024-11-03T13:59:33.288456Z",
-     "shell.execute_reply": "2024-11-03T13:59:33.288280Z",
-     "shell.execute_reply.started": "2024-11-03T13:59:33.288263Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db6abd11-c293-4366-8d7e-80f2a1d375d2",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "per_antibody_escape = pd.read_csv(per_antibody_escape_csv)\n",
+    "def get_hex_color_palette(num_colors):\n",
+    "    colors = seaborn.color_palette(\"hls\", num_colors)\n",
+    "    hex_colors = [matplotlib.colors.to_hex(color) for color in colors]\n",
+    "    return hex_colors\n",
     "\n",
-    "antibodies = list(per_antibody_escape[\"antibody\"].unique())\n",
-    "print(f\"{antibodies=}\")\n",
+    "nconditions = phenotypes[condition_column].nunique()\n",
+    "if nconditions > 4:\n",
+    "    colors = \",\".join(get_hex_color_palette(nconditions))\n",
+    "else:\n",
+    "    colors = \"#0072B2,#CC79A7,#4C3549,#009E73\"\n",
     "\n",
-    "per_antibody_escape = (\n",
-    "    per_antibody_escape\n",
-    "    .pivot_table(\n",
-    "        index=[\"site\", \"wildtype\", \"mutant\"],\n",
-    "        columns=\"antibody\",\n",
-    "        values=\"escape\",\n",
-    "    )\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "shared_cols = [\"site\", \"wildtype\", \"mutant\"]\n",
-    "if (\n",
-    "    set(phenotypes_no_escape.columns).intersection(per_antibody_escape.columns)\n",
-    "    != set(shared_cols)\n",
-    "):\n",
-    "    raise ValueError(f\"{phenotypes_no_escape.columns=}\\n{per_antibody_escape.columns=}\")\n",
-    "\n",
-    "phenotypes = phenotypes_no_escape.merge(\n",
-    "    per_antibody_escape, on=shared_cols, how=\"outer\", validate=\"one_to_one\",\n",
-    ")\n",
-    "for antibody in antibodies:\n",
-    "    phenotypes[antibody] = phenotypes[antibody].where(\n",
-    "        phenotypes[\"mutant\"] != phenotypes[\"wildtype\"],\n",
-    "        0,\n",
-    "    )\n",
-    "\n",
-    "phenotypes"
+    "print(f\"Using {colors=}\")\n",
+    "seaborn.palplot(seaborn.color_palette(colors.split(\",\")))"
    ]
   },
   {
@@ -371,6 +355,7 @@
     "    \"--condition\", condition_column,\n",
     "    \"--sitemap\", dms_viz_sitemap,\n",
     "    \"--description\", description_text,  # currently broken, see https://github.com/dms-viz/dms-viz.github.io/issues/96\n",
+    "    \"--colors\", colors,\n",
     "]\n",
     "\n",
     "for col in [\n",
