show filter limits for `dms-viz`

--- a/notebooks/configure_dms_viz.py.ipynb
+++ b/notebooks/configure_dms_viz.py.ipynb
@@ -354,7 +354,6 @@
     "    \"--metric\", metric_column,\n",
     "    \"--condition\", condition_column,\n",
     "    \"--sitemap\", dms_viz_sitemap,\n",
-    "    \"--description\", description_text,  # currently broken, see https://github.com/dms-viz/dms-viz.github.io/issues/96\n",
     "    \"--colors\", colors,\n",
     "]\n",
     "\n",
@@ -375,6 +374,7 @@
     "    \"summary-stat\",\n",
     "    \"tooltip-cols\",\n",
     "    \"filter-cols\",\n",
+    "    \"filter-limits\",\n",
     "    \"title\",\n",
     "]:\n",
     "    cmds += [f\"--{col}\", str(config[col])]\n",
