add descriptions to `dms-viz` JSONs

--- a/notebooks/configure_dms_viz.py.ipynb
+++ b/notebooks/configure_dms_viz.py.ipynb
@@ -71,9 +71,11 @@
     "    per_antibody_escape_csv = snakemake.input.per_antibody_escape_csv\n",
     "\n",
     "dms_viz_json = snakemake.output.json\n",
+    "dms_viz_json_no_description = snakemake.output.json_no_description\n",
     "dms_viz_sitemap = snakemake.output.sitemap\n",
     "dms_viz_phenotypes = snakemake.output.phenotypes\n",
     "pdb_file = snakemake.output.pdb_file\n",
+    "description_md = snakemake.output.description_md\n",
     "\n",
     "description_suffix = snakemake.params.description_suffix\n",
     "\n",
@@ -321,11 +323,17 @@
    "source": [
     "description_text = \"\\n\\n\".join(\n",
     "    [\n",
+    "        f\"## {config['title']}\",\n",
     "        config[\"description\"] if config[\"description\"] is not None else \"\",\n",
     "        f\"Structure shown is from PDB {pdb_id}.\",\n",
     "        description_suffix,\n",
     "    ]\n",
-    ").lstrip()"
+    ").lstrip()\n",
+    "\n",
+    "print(description_text)\n",
+    "\n",
+    "with open(description_md, \"w\") as f:\n",
+    "    f.write(description_text)"
    ]
   },
   {
@@ -349,7 +357,7 @@
     "    \"configure-dms-viz\", \"format\",\n",
     "    \"--name\", name,\n",
     "    \"--input\", dms_viz_phenotypes,\n",
-    "    \"--output\", dms_viz_json,\n",
+    "    \"--output\", dms_viz_json_no_description,\n",
     "    \"--structure\", pdb_file,\n",
     "    \"--metric\", metric_column,\n",
     "    \"--condition\", condition_column,\n",
@@ -380,7 +388,17 @@
     "    cmds += [f\"--{col}\", str(config[col])]\n",
     "\n",
     "print(f\"Running the following commands:\\n{cmds}\")\n",
-    "subprocess.run(cmds, check=True)"
+    "subprocess.run(cmds, check=True)\n",
+    "\n",
+    "cmds_join = [\n",
+    "    \"configure-dms-viz\", \"join\",\n",
+    "    \"--input\", dms_viz_json_no_description,\n",
+    "    \"--description\", description_md,\n",
+    "    \"--output\", dms_viz_json,\n",
+    "]\n",
+    "\n",
+    "print(f\"Running the following commands:\\n{cmds_join}\")\n",
+    "subprocess.run(cmds_join, check=True)"
    ]
   },
   {
