--- a/notebooks/configure_dms_viz.py.ipynb
+++ b/notebooks/configure_dms_viz.py.ipynb
@@ -384,6 +384,7 @@
     "    \"filter-cols\",\n",
     "    \"filter-limits\",\n",
     "    \"title\",\n",
+    "    \"description\",\n",
     "]:\n",
     "    cmds += [f\"--{col}\", str(config[col])]\n",
     "\n",
@@ -426,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
